syntax = "proto3";

option csharp_namespace = "EmployeeApi.Grpc";

package employee;

//cd C:\Users\Admin\Desktop\demo-main\GrpcClient
// gRPC service for Employee operations
service EmployeeGrpc {
  rpc GetById (GetEmployeeRequest) returns (EmployeeResponse);
  rpc GetAll (Empty) returns (EmployeeListResponse);
}

message Empty {}

message GetEmployeeRequest
{
  int32 id = 1;
}

message EmployeeResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string job_role = 4;
  string system_role = 5;
  optional int32 department_id = 6;
  optional string department_name = 7;
}

message EmployeeListResponse {
  repeated EmployeeResponse employees = 1;
}
